# ngams

./: AUTHORS  COPYING  ChangeLogc  INSTALL  Makefile.am  README  README.md  VERSION  VERSIONc  __init__.py  bootstrap
ngamsCClient/: .project  Makefile.standalone  ngamsARCH_CLI_MAN_PAGE.c  ngamsArchiveClient.c  ngamsCClientLib.c  ngamsLICENSE.c  ngamsMAN_PAGE.c  ngamsVERSION.h
ngamsData/: XmlStd.dtd  XmlStd_dtd.py  ngamsCfgNoSim_xml.py  ngamsCfgSim_xml.py  ngamsCfgTESTSRV-ngastst1_xml.py  ngamsCfg_dtd.py  ngamsInternal.dtd  ngamsInternal_dtd.py  ngamsLogDef.xml  ngamsLogDef_xml.py  ngamsStatus.dtd  ngamsStatus_dtd.py
ngamsJClient/: .classpath  .project
ngamsJClient/src/: Makefile.am
ngamsJClient/src/alma/ngas/client/: ConnectionManager.java  FileInfo.java  FileReceivedEvent.java  FileReceivedEventListener.java  HttpInputStream.java  JClient.java  MiniServer.java  Status.java
ngamsLib/: ngamsCacheEntry.py  ngamsDbCore.py  ngamsDbJoin.py  ngamsDbNgasDisks.py  ngamsDbNgasSubscribers.py  ngamsFileSummary1.py  ngamsHighLevelLib.py  ngamsPlugInApi.py  ngamsReqProps.py  ngamsStatus.py
ngamsPClient/: ngamsPClient.py
ngamsPlugIns/: ngamsAlmaCacheCtrlPI.py  ngamsBulkCopyDppi.py  ngamsCmd_COMPRESSLOG.py  ngamsCmd_HTTPFETCH.py  ngamsCmd_MIRRARCHIVE.py  ngamsCmd_MIRREXEC.py  ngamsCmd_MIRRTABLE.py  ngamsCmd_QARCHIVE.py  ngamsCmd_QUERY.py  ngamsCmd_RSYNC.py  ngamsCmd_RSYNCFETCH.py  ngamsCmd_SYNC.py  ngamsDAPIMirroring.py  ngamsExtractFitsHdrDppi.py  ngamsGenCrc32.py  ngamsGenRegPlugIn.py  ngamsHttpDbInterface.py  ngamsOracle.py  ngamsSdmMultipart.py  ngamsSqlite.py  (+4 more)
(+123 files in other folders)
